// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle Component should match snapshot when checked 1`] = `
<DocumentFragment>
  <label
    class=" inline-flex items-center cursor-pointer"
    data-testid="toggle-label"
    for="toggle-test"
  >
    <input
      aria-label="Toggle"
      checked=""
      class="sr-only peer"
      id="toggle-test"
      type="checkbox"
    />
    <div
      class="
      relative
      bg-gray-700
      border-gray-600
      rounded-full
      rtl:peer-checked:after:-translate-x-full
      peer
      peer-focus:outline-none
      peer-focus:ring-2
      peer-focus:ring-(--pokedex-blue)
      peer-focus:ring-white
      peer-checked:after:translate-x-full
      peer-checked:after:border-(--pokedex-red-light)
      peer-checked:bg-(--pokedex-blue)
      after:transition-all
      after:content-['']
      after:absolute
      after:top-[2px]
      after:start-[2px]
      after:bg-white
      after:border-gray-300
      after:border
      after:rounded-full
      w-11 h-6 after:h-5 after:w-5
    "
    />
  </label>
</DocumentFragment>
`;

exports[`Toggle Component should match snapshot when unchecked 1`] = `
<DocumentFragment>
  <label
    class=" inline-flex items-center cursor-pointer"
    data-testid="toggle-label"
    for="toggle-test"
  >
    <input
      aria-label="Toggle"
      class="sr-only peer"
      id="toggle-test"
      type="checkbox"
    />
    <div
      class="
      relative
      bg-gray-700
      border-gray-600
      rounded-full
      rtl:peer-checked:after:-translate-x-full
      peer
      peer-focus:outline-none
      peer-focus:ring-2
      peer-focus:ring-(--pokedex-blue)
      peer-focus:ring-white
      peer-checked:after:translate-x-full
      peer-checked:after:border-(--pokedex-red-light)
      peer-checked:bg-(--pokedex-blue)
      after:transition-all
      after:content-['']
      after:absolute
      after:top-[2px]
      after:start-[2px]
      after:bg-white
      after:border-gray-300
      after:border
      after:rounded-full
      w-11 h-6 after:h-5 after:w-5
    "
    />
  </label>
</DocumentFragment>
`;

exports[`Toggle Component should match snapshot with children 1`] = `
<DocumentFragment>
  <label
    class=" inline-flex items-center cursor-pointer"
    data-testid="toggle-label"
    for="toggle-test"
  >
    <input
      aria-label="Label"
      class="sr-only peer"
      id="toggle-test"
      type="checkbox"
    />
    <span
      class="ms-3 mr-2 text-xs text-foreground"
    >
       Label 
    </span>
    <div
      class="
      relative
      bg-gray-700
      border-gray-600
      rounded-full
      rtl:peer-checked:after:-translate-x-full
      peer
      peer-focus:outline-none
      peer-focus:ring-2
      peer-focus:ring-(--pokedex-blue)
      peer-focus:ring-white
      peer-checked:after:translate-x-full
      peer-checked:after:border-(--pokedex-red-light)
      peer-checked:bg-(--pokedex-blue)
      after:transition-all
      after:content-['']
      after:absolute
      after:top-[2px]
      after:start-[2px]
      after:bg-white
      after:border-gray-300
      after:border
      after:rounded-full
      w-11 h-6 after:h-5 after:w-5
    "
    />
  </label>
</DocumentFragment>
`;
